// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormLabel Dev 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <label
      aria-required={true}
      className="fd-form-label fd-form-label--required"
    >
      Default
    </label>
    <input
      className="fd-input"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormLabel Disabled 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <label
      className="fd-form-label is-disabled"
    >
      Disabled Label
    </label>
    <input
      className="fd-input"
      disabled={true}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormLabel Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <label
      className="fd-form-label"
    >
      Default Label
    </label>
    <input
      className="fd-input"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormLabel Required 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <label
      aria-required={true}
      className="fd-form-label fd-form-label--required"
    >
      Required Label
    </label>
    <input
      className="fd-input"
      type="text"
    />
  </div>
</div>
`;
